# grisbi_test

./: CMakeLists.txt  Makefile  README.md  TEST1.gsb  example_grisby.gsb  grisbi_test.vlp  main.ui
cmake/: project.cmake
src/: Bank.vala  Kategorie.vala  Konto.vala  MasterState.vala  Party.vala  Planer.vala  Subkategorie.vala  Transaktion.vala  load_file.vala  main.ui  main.vala  makefile.txt
